# azusa_sync

backend/: Cargo.toml
backend/src/: error.rs  item.rs  table.rs
frontend/: package.json
src/: client.rs  item.rs  lock_copy.rs  main.rs  progress.rs
