[package]
name = "azusa"
version = "0.1.0"
authors = ["techno-tanoC <develop.tanoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.3.2"
reqwest = { version = "0.10.4", features = ["native-tls-vendored", "blocking"] }
tempfile = "3.1.0"
uuid = { version = "0.8.1", features = ["v4"] }
